# book-summary

./: .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md  flake.nix
.github/workflows/: cargo_publish.yml  check.yml  rustbuildtest.yml  test.yml
examples/gitbook/: book.json
examples/mdbook/: book.toml
examples/mdbook/src/: SUMMARY.md
src/: book.rs  main.rs
